# discord-bot

./: .gitignore  db_utils.py  main.py  privileges.py  pyproject.toml  shared.py
cogs/: fun.py  math.py  misc.py  moderation.py  voice.py  youtube.py
cogs/.ipynb_checkpoints/: fun-checkpoint.py
