[project]
name = "my-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "disnake>=2.11.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.4",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pynacl>=1.6.0",
    "sympy>=1.14.0",
    "yt-dlp>=2025.10.22",
]
